# Otter

./: .gitignore  CODE_OF_CONDUCT.md  README.md  setup.cfg
.github/workflows/: pull_request.yml  release.yml
docker/: Dockerfile  build.bash  run.bash
otter/: __init__.py  build_trainer.py  custom_aug.py  mixin.py  model_profile.py  text_converter.py
